No need for throttle, is-typing works just fine. Added styles to differentiate the panes.

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -28,5 +28,5 @@
   @import each of them in reverse-priority order (bottom = highest priority).
 */
 @import 'global';
-@import 'chatBar';
+@import 'chat';
 @import 'message';
